--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ import_heading_firstparty = "Project dependencies"
 import_heading_localfolder = "Local dependencies"
 force_sort_within_sections = true
 combine_as_imports = true
+lines_after_imports = 2
 
 [tool.mypy]
 exclude = [".*/?\\.venv/.*", "/site-packages/"]
