--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,10 @@ license = "MIT License"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.12, <3.13"
-pysnmp-lextudio = "5.0.34"
+python = ">=3.10, <3.13"
 telnetlib3 = "^2.0.4"
 pyside6 = "^6.7.2"
-
+puresnmp = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
@@ -46,19 +45,22 @@ import_heading_firstparty = "Project dependencies"
 import_heading_localfolder = "Local dependencies"
 force_sort_within_sections = true
 combine_as_imports = true
+lines_after_imports = 2
 
 [tool.mypy]
 exclude = [".*/?\\.venv/.*", "/site-packages/"]
 strict = true
 follow_imports = "silent"
 
+# Note: There are no tests at the moment, but Pytest is left installed as a development
+# dependency.
 [tool.poe.tasks]
-all = ["format", "typecheck", "test"]
+all = ["format", "typecheck"]                                 # ["format", "typecheck", "test"]
 check-imports = "isort . --check"
 check-code-formatting = "black . --check"
 check-formatting = ["check-code-formatting", "check-imports"]
 format-imports = "isort ."
 format-code = "black ."
 format = ["format-code", "format-imports"]
-test = "pytest"
+# test = "pytest"
 typecheck = "mypy --package cyberpower_pdu --no-site-packages --enable-incomplete-feature=NewGenericSyntax"
